# Peptonizer2000

./: .gitignore  S03_sample.tsv  readme.md
.devcontainer/: devcontainer.json
config/: config.yaml
peptonizer/: setup.py
peptonizer/peptonizer/: __init__.py  analyse_grid_search.py  extract_taxon_scores.py  factor_graph_generation.py  fetch_peptides_and_filter_taxa.py  ncbi_ranks.py  plot_results.py  taxa_clustering.py  taxon_manager.py  unipept_communicator.py  unipept_get_taxonomy_from_pout.py  weight_taxa.py  zero_lookahead_belief_propagation.py
peptonizer_rust/: Cargo.toml
peptonizer_rust/src/: array_utils.rs  convolution_tree.rs  factor_graph.rs  factor_graph_node.rs  http_client.rs  lib.rs  main.rs  messages.rs  node.rs  random.rs  taxon_manager.rs  utils.rs  weight_taxa.rs  zero_lookahead_belief_propagation.rs
peptonizer_ts/: package.json  peptonizer-v0.0.26.tgz  peptonizer-v0.0.28.tgz  vite.config.js
peptonizer_ts/src/: GraphGenerationWorkerPool.ts  GridSearchProgressListener.ts  Peptonizer.ts  PeptonizerInputParser.ts  PeptonizerProgressListener.ts  TSVParser.ts  index.ts  main.ts
resources/XTandem/: xtandem_default.xml
resources/test_files/: config.yaml
snakemake/config/: config.yaml
snakemake/workflow/: Snakefile  after_explosion.csv  env.yml  higher_taxa_step.csv  weight_step.csv
workflow/: Snakefile
workflow/Additional_analysis_scripts/: Export_for_unipept.py  export_tsv.py
workflow/rules/: ClusterTaxa.smk  CurateDatabase.smk  GridSearchAnalysis.smk  MS2Rescore.smk  ParsePouttoUnipept.smk  config.smk
workflow/scripts/: PepGM.py  (+8 more)
(+20 files in other folders)
